[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "YahooTools"
version = "0.0.1"
authors = [{name = "William Kruta"}]
description = "..."
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["YahooTools"]